--- a/content/resources/21g-705s04-th.md
+++ b/content/resources/21g-705s04-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Goals and skills. Image courtesy of Adolfo Plasencia Diago. Used with
   Permission.
-file: /media/courses/21g-705-oral-communication-in-spanish-spring-2004/3ce4b0423f082a4e47aea74dc707c7e4_21G-705s04-th.jpg
+file: /courses/21g-705-oral-communication-in-spanish-spring-2004/3ce4b0423f082a4e47aea74dc707c7e4_21G-705s04-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Goals and skills. (Image courtesy of Adolfo Plasencia Diago. Used with
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 21G-705s04-th.jpg
 uid: 3ce4b042-3f08-2a4e-47ae-a74dc707c7e4
 ---
+Goals and skills. Image courtesy of Adolfo Plasencia Diago. Used with Permission.
+
