--- a/content/resources/21g-705s04.md
+++ b/content/resources/21g-705s04.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Goals and skills. Image courtesy of Adolfo Plasencia Diago. Used with
   Permission.
-file: /media/courses/21g-705-oral-communication-in-spanish-spring-2004/35f941d29467fe8d22b65cde818a3321_21G-705s04.jpg
+file: /courses/21g-705-oral-communication-in-spanish-spring-2004/35f941d29467fe8d22b65cde818a3321_21G-705s04.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Goals and skills. (Image courtesy of Adolfo Plasencia Diago. Used with
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 21G-705s04.jpg
 uid: 35f941d2-9467-fe8d-22b6-5cde818a3321
 ---
+Goals and skills. Image courtesy of Adolfo Plasencia Diago. Used with Permission.
+
