--- a/content/resources/21g-705s04-th.md
+++ b/content/resources/21g-705s04-th.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: Image courtesy of Adolfo Plasencia Diago. Used with Permission.
   image-alt: A graphic map with photos of goals and skills needed.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21G-705s04-th.jpg
 uid: 3ce4b042-3f08-2a4e-47ae-a74dc707c7e4
 ---
 Goals and skills. Image courtesy of Adolfo Plasencia Diago. Used with Permission.
-
