--- a/content/resources/21g-705s04.md
+++ b/content/resources/21g-705s04.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: Image courtesy of Adolfo Plasencia Diago. Used with Permission.
   image-alt: A graphic map with photos of goals and skills needed.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21G-705s04.jpg
 uid: 35f941d2-9467-fe8d-22b6-5cde818a3321
 ---
 Goals and skills. Image courtesy of Adolfo Plasencia Diago. Used with Permission.
-
