Sync all content

--- a/content/resources/21g-705s04-th.md
+++ b/content/resources/21g-705s04-th.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Goals and skills. Image courtesy of Adolfo Plasencia Diago. Used with
   Permission.
 file: /courses/21g-705-oral-communication-in-spanish-spring-2004/3ce4b0423f082a4e47aea74dc707c7e4_21G-705s04-th.jpg
+file_size: 11897
 file_type: image/jpeg
 image_metadata:
   caption: Goals and skills. (Image courtesy of Adolfo Plasencia Diago. Used with
